Fix bugs preventing readthedocs from rebuilding the documentation (#1945)

--- a/command_index.in
+++ b/command_index.in
@@ -1,6 +1,6 @@
-=================
-Command index
-=================
+=============
+Command Index
+=============
 
 This is an alphabetical list of commands with links to the places they
 appear in the documentation.
